# aruco

./: .gitignore  CMakeLists.txt
cmake/: compilerOptions.cmake  findDependencies.cmake  options.cmake  printInfo.cmake
include/aruco/: aruco.h  cameraparameters.h  cvdrawingutils.h  debug.h  dictionary.h  dictionary_based.h  ippe.h  marker.h  markerdetector.h  markerlabeler.h  markermap.h  posetracker.h  svmmarkers.h
src/: CMakeLists.txt  cameraparameters.cpp  cvdrawingutils.cpp  debug.cpp  dictionary.cpp  dictionary_based.cpp  ippe.cpp  marker.cpp  markerdetector.cpp  markerlabeler.cpp  markermap.cpp  posetracker.cpp  svmmarkers.cpp
tests/: highlyreliablemarkers.cpp  image2contourfile.cpp  test_dummy.cpp  test_picoflann.cpp
utils/: CMakeLists.txt  aruco_batch_processing.cpp  aruco_print_dictionary.cpp  aruco_print_marker.cpp  aruco_simple.cpp  aruco_test.cpp  aruco_tracker.cpp
utils_calibration/: CMakeLists.txt  aruco_calibration.cpp  aruco_calibration_fromimages.cpp  aruco_portable_calibration.cpp  calibrator.h
utils_markermap/: CMakeLists.txt  aruco_create_markermap.cpp  aruco_markermap_pix2meters.cpp  aruco_simple_markermap.cpp  aruco_test_markermap.cpp  pcdwriter.cpp  sglviewer.h
utils_svm/: CMakeLists.txt  aruco_test_svm.cpp
